[package]
name = "toji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-socket = "0.7.0"
regex = "1.10.3"
colored = "2.1.0"
chrono = "0.4.34"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tokio = { version = "1.0", features = ["full"] }
hyper = "1.2.0"
base64 = "0.22.0"
sha1 = "0.11.0-pre.3"
hyper-util = "0.1.3"
hex = "0.4.3"
hmac = "0.13.0-pre.3"
sha2 = "0.11.0-pre.3"
rand = "0.8.5"
async-trait = "0.1.77"
sysinfo = "0.30.6"
md5 = "0.7.0"
